# hpp-toppra

./: CMakeLists.txt  flake.nix  package.xml
.github/workflows/: update-flake-lock.yml
include/hpp/toppra/: toppra.hh
include/pyhpp/toppra/: toppra.hh
python/: CMakeLists.txt  path.cc
python/pyhpp/toppra/: toppra.cc
python/pyhpp_toppra/: bindings.cc  toppra.cc
src/: piecewise-polynomial.hh  serialization.hh  toppra-plugin.cc  toppra.cc
tests/: catch.hpp  test-ill-formed-paths.cc  test_read_path.py  test_toppra.py  tests.cc  tests.hh
